--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,19 @@
     -moz-user-select: none;
     user-select: none;
   }
+  
+  .bg-image {
+    background-image: url('../Imagen/fondopagina2.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+
+  
+  
 
   @media (min-width: 768px) {
     .bd-placeholder-img-lg {
       font-size: 3.5rem;
     }
   }
-  .
