--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
   .bg-image {
     background-image: url('../Imagen/pic.jpg');
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-size: cover;
     /* margin: 2%; */
   }
@@ -56,14 +56,7 @@ body{
    transition: 1s;
  }
 
- .nav-hover-2{
-  padding: 8px 12px;
-  border-radius: 3px;
-}
- .nav-hover-2:hover{
-   color: #960e68;
-  transition: 1s;
- }
+ 
  
 
   @media (min-width: 768px) {
