--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body{
   .bg-image2 {
     background-image: url('../Imagen/3.jpg');
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-size: cover;
     /* margin: 2%; */
   }
